--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,7 @@
 body {
     background-image: url("../images/02.jpeg");
     background-size: cover;
+    /* position: absolute; -- this makes the css change for the rest of the page but background size changes if I leave alone */ 
     width: 75%;
     margin: 0 auto;
 }
@@ -9,5 +10,14 @@ body {
     font-weight: bold;
     color: white;
     text-align: center;
-    margin-top: 20px;
+    margin: 20px;
+
+}
+
+#movie-form {
+    margin: 10px;
+}
+
+#movies-table {
+    margin: 10px auto;
 }
